--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>Translate</title>
 		<meta charset="utf-8" />
 		<meta name="author" content="Joshua Bee" />
-		<meta name="description" content="Translate" />
+		<meta name="description" content="📝 Translates text into visually similar non-English characters" />
 		<!-- Let browser know website is optimized for mobile -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<link rel="icon" type="image/png" href="images/logos/logo-192.png" />
